[package]
name = "keybinding"
version = "0.1.0"
edition = "2021"
description = "A simple keybinding library for Rust"
authors = ["Joshka"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/keybinding"
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]

[dependencies]
crossterm = { version = "0.27.0", features = ["serde"] }
termion = { version = "2.0.3", features = ["serde"] }
termwiz = { version = "0.20.0", features = ["serde"] }
